Add discount subsystem; refactor order & validators
Upgrade Java toolchain to 19 and add a new discount subsystem (DiscountCalculator, DiscountPolicy, DiscountType, DiscountStrategy and concrete strategies). Refactor EventDateManager to compute special dates. Rework Order (immutable item map view, discount details, gift eligibility, price/benefit calculations), MenuItem input validation, EventBadge (display names, selection logic), OrderService parsing, GiftService/BadgeService tweaks, and replace scattered error messages with ErrorMessage enum. Simplify and harden DateValidator and OrderListValidator to use centralized messages and clearer parsing/validation.