@@ -1,21 +1,17 @@
 package christmas.model.entity;
 
 import christmas.model.MenuCategory;
-import christmas.utils.Constants;
-import java.util.Objects;
 
 public record MenuItem(String name, int price, MenuCategory category) {
     public MenuItem {
-        validate(name, price, category);
-    }
-
-    private void validate(String name, int price, MenuCategory category) {
-        if (name == null || name.trim().isEmpty()) {
+        if (name == null || name.isBlank()) {
             throw new IllegalArgumentException("Item name cannot be null or empty.");
         }
-        if (price < Constants.ZERO) {
+        if (price < 0) {
             throw new IllegalArgumentException("Item price cannot be negative.");
         }
-        Objects.requireNonNull(category, "Item category cannot be null.");
+        if (category == null) {
+            throw new IllegalArgumentException("Item category cannot be null.");
+        }
     }
 }
